# tex-repo-word-counter

./: .gitignore  README.md  count.py  pyproject.toml  requirements.txt
src/pupil/: __init__.py  pupil.py
