[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pupil"
version = "1.0.0"
authors = [
    { name = "Max Hughson", email = "max.ak.hughson@gmail.com" },
]
description = "Tex Repository Word Counter"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["GitPython","matplotlib"]

[project.scripts]
pupil = "pupil:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pupil*"]
namespaces = false

[project.urls]
